// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout matches snapshot: enzyme.mount 1`] = `
<Layout>
  <glamorous(div)>
    <div
      className="css-1y5mnt6"
    >
      example
    </div>
  </glamorous(div)>
</Layout>
`;

exports[`Layout matches snapshot: enzyme.render 1`] = `
<div
  class="css-1y5mnt6"
>
  example
</div>
`;

exports[`Layout matches snapshot: enzyme.shallow 1`] = `
<glamorous(div)>
  example
</glamorous(div)>
`;
